--- a/project_report/references.bib
+++ b/project_report/references.bib
@@ -1,3 +1,7 @@
+@misc{motor,
+  title = {Motors In Box 2D},
+  howpublished = {https://www.iforce2d.net/b2dtut/joints-revolute}
+}		
 @misc{wiki,
   title = {Forklift truck},
   howpublished = {en.wikipedia.org/wiki/Forklift\_truck‎}
@@ -6,5 +10,3 @@
   title = {Dancing Diggers},
   howpublished = {https://www.youtube.com/watch?v=DL3h\_GS3tbQ}
 }
-
-
